Fix table overflow issue

--- a/scale-ui/app/styles/base.less
+++ b/scale-ui/app/styles/base.less
@@ -272,6 +272,11 @@ caption {
 
 .table {
     margin-bottom: 10px;
+    table-layout: fixed;
+
+    td {
+        word-wrap: break-word;
+    }
 }
 
 .table-hover {
